[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprobe"
version = "0.2.0"
description = "Chaos engineering and evaluation SDK for AI agents — break your agent's world and see if it survives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "IrisDataLabs"},
]
keywords = ["ai", "agents", "testing", "evaluation", "tracing", "llm", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/irisdatalabs/agentprobe"
Documentation = "https://agentprobe.dev"
Repository = "https://github.com/irisdatalabs/agentprobe"
Issues = "https://github.com/irisdatalabs/agentprobe/issues"

[project.scripts]
agentprobe = "agentprobe.cli:main"

[tool.setuptools.packages.find]
include = ["agentprobe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
